# langextract

./: .env.example  README.md  autoformat.sh  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
docs/: USAGE.md
docs/trafficmind/: architecture.md  deployment.md  evaluation_ui.md  model_registry.md  multimodal_review_workflow.md  natural_language_search.md  privacy_redaction.md  signal_analytics.md  signal_integration.md
examples/configs/: extract.json  extract.toml  extract.yaml
examples/custom_provider_plugin/: README.md
examples/custom_provider_plugin/langextract_provider_example/: provider.py  schema.py
langextract/: __init__.py  cli.py  extraction.py  factory.py  ingestion.py  ingestion_backends.py  ocr.py  plugins.py  visualization.py
langextract/providers/: README.md  __init__.py  backends.py  builtin_registry.py  common.py  gemini.py  ollama.py  openai.py  patterns.py
scripts/: check_trafficmind.py  create_provider_plugin.py  render_trafficmind_evaluation_report.py
tests/: cli_test.py  extract_ingestion_test.py  extract_precedence_test.py  factory_test.py  inference_test.py  ingestion_backends_test.py  ingestion_test.py  init_test.py  ocr_test.py  provider_backends_test.py  public_api_test.py  registry_test.py  selection_system_test.py  test_live_api.py  test_ollama_integration.py  trafficmind_access_test.py  trafficmind_analytics_engine_test.py  trafficmind_arbitration_test.py  trafficmind_cli_test.py  trafficmind_config_test.py  trafficmind_evaluation_test.py  trafficmind_health_test.py  trafficmind_integrations_test.py  trafficmind_models_test.py  trafficmind_occupancy_test.py  trafficmind_oversaturation_test.py  trafficmind_phase_duration_test.py  trafficmind_privacy_test.py  trafficmind_queue_discharge_test.py  trafficmind_registry_test.py  trafficmind_review_workflow_test.py  trafficmind_search_test.py  trafficmind_service_test.py  trafficmind_sources_test.py  trafficmind_store_test.py  trafficmind_violation_trend_test.py  visualization_test.py
trafficmind/: __init__.py  arbitration.py  cli.py  config.py  exceptions.py  health.py  models.py  service.py  store.py
trafficmind/analytics/: __init__.py  engine.py  models.py  occupancy.py  oversaturation.py  phase_duration.py  queue_discharge.py  violation_trend.py
trafficmind/evaluation/: __init__.py  io.py  models.py  report.py
trafficmind/integrations/: __init__.py  interfaces.py  local.py  models.py  signals.py
trafficmind/registry/: __init__.py  models.py  registry.py
trafficmind/review/: __init__.py  access.py  models.py  privacy.py  prompts.py  workflow.py
trafficmind/search/: __init__.py  executor.py  models.py  parser.py  store.py
trafficmind/sources/: __init__.py  base.py  file_feed.py  polling.py  simulator.py  webhook.py
